# Evolver-P

./: ARCH_DECISION_RECORD.md  Cargo.toml  HTP_IMPLEMENTATION_STRATEGY.md  IDEAL_MODEL_SPEC.md  PREAMBLE.md  README.md  SPECIFICATION.md  Security vs. Trainability.md  THEORY.md  Test Summary Report.md
src/: interface.rs  lib.rs  main.rs
src/body/: adapter.rs  decoder.rs  guard_proxy.rs  mod.rs  projection.rs  topology.rs
src/control/: bias_channel.rs
src/dsl/: math_kernel.rs  mod.rs  schema.rs  stp_bridge.rs
src/soul/: algebra.rs  governor.rs  lifter.rs  mod.rs
src/will/: evaluator.rs  mod.rs  optimizer.rs  perturber.rs  ricci.rs  tracer.rs
src（Phase 3）/: decoder.rs  structure.rs  train_loop.rs
src（Phase 3）/core/: affine.rs  algebra.rs  mod.rs  neuron.rs  oracle.rs  param.rs  primes.rs  probe.rs
src（Phase 3）/dsl/: parser.rs  schema.rs
src（Phase 3）/evolution/: engine.rs  mutagen.rs
src（Phase 3）/tests/: streaming_test.rs
src（Phase 3）/topology/: folding.rs  tensor.rs
src（new）/control/: mod.rs
src（new）/dsl/: mod.rs  schema.rs  stp_bridge.rs
theory/: Constraint_Semantics.md  Context_Dynamics.md  Energy_Definition.md  Geometry of Non-Smooth Control.md  Optimization_Problem.md  Projection_Constraints.md  Rigorous_Logic_Semantics.md  Topological_Closure.md  UNIFIED_BIAS_DEFINITION.md  Unified_Energy_Metric.md  Verification_Protocol.md
