[package]
name = "new_evolver"
version = "0.3.0" # Version Bump: Lite Edition (Logic Only)
edition = "2021"

# 编译为 Python 扩展库 (.so / .pyd)
[lib]
name = "new_evolver"
crate-type = ["cdylib"]

[dependencies]
# 核心数据序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 基础数学与随机数 (用于 VAPO 扰动)
rand = "0.8"
num-integer = "0.1"

# Python FFI 绑定
pyo3 = { version = "0.20.0", features = ["extension-module"] }

# 通用错误处理
anyhow = "1.0"
