[package]
name = "evolver"
version = "0.1.0"
edition = "2021"
authors = ["M-Patek"]
description = "A Formally Verifiable Evolutionary Solver based on STP and Ideal Class Groups"
license = "Proprietary"

[dependencies]
# 核心代数库 (原有的)
num-traits = "0.2"
num-bigint = "0.4"
# num-rational = "0.4" # 喵！已被抛弃，精度不够且不支持超越函数

# [NEW] 引入 VAPO 的救命稻草：高精度计算库
# features "float" 开启 MPFR 浮点数支持
# features "integer" 开启 GMP 整数支持
rug = { version = "1.19", features = ["float", "integer", "std"] }

# 序列化支持
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 并行计算支持 (Rayon)
rayon = "1.7"

# 随机数生成
rand = "0.8"

# 命令行参数解析
clap = { version = "4.3", features = ["derive"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# Python 绑定 (用于与外部 AI 生态交互)
pyo3 = { version = "0.19", features = ["extension-module"] }

[lib]
name = "evolver"
crate-type = ["cdylib", "rlib"]
